tests/functional/lang/eval-fail-attrset-merge-drops-later-rec.err.exp
at /pwd/lang/eval-fail-attrset-merge-drops-later-rec.nix:4:9:
            3|   a = rec {
            4|     c = d + 2;
             |         ^
            5|     d = 3;

       error: undefined variable 'd'
